# learning-photogrammetric-computer-vision

./: .gitattributes  00_keypoints.ipynb  01_descriptors.ipynb  02_stitching_images.ipynb  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: box_summing.py  compute_corners.py  compute_descriptors.py  compute_matches.py  gaussian_kernel.py  harris_corners.py  homography.py  non_maximum_suppression.py  shi_tomasi_corners.py  sobel_kernel.py  utils.py
