[project]
name = "image-stitching"
version = "0.1.0"
description = "Image stitching educational project"
authors = [
    {name = "Vladislav Tananaev", email = "idlogrus@gmail.com"}
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "pathlib>=1.0.1",
    "pillow>=11.1.0",
    "scipy>=1.15.2",
]

[tool.black]
line-length = 120
